Cherry-pick r288363. rdar://problem/88995092

Fix build when using Visual Studio 2022
    https://bugs.webkit.org/show_bug.cgi?id=235440

    Reviewed by Antti Koivisto.

    It doesn't like having a switch with a default but no cases.
    This is cleaner with if statements anyways.
    Also make members const because I can.

    * jit/JITCode.cpp:
    (JSC::JITCode::calleeSaveRegisters const):
    * jit/JITCode.h:

    Canonical link: https://commits.webkit.org/246267@main
    git-svn-id: https://svn.webkit.org/repository/webkit/trunk@288363 268f45cc-cd09-0410-ab3c-d52691b4dbfc

Canonical link: https://commits.webkit.org/245886.233@safari-613-branch
git-svn-id: https://svn.webkit.org/repository/webkit/branches/safari-613-branch@290789 268f45cc-cd09-0410-ab3c-d52691b4dbfc