Source/JavaScriptCore/jit/JITCode.h
@@ -232,8 +232,8 @@ public:
     const RegisterAtOffsetList* calleeSaveRegisters() const;
 
 private:
-    JITType m_jitType;
-    ShareAttribute m_shareAttribute;
+    const JITType m_jitType;
+    const ShareAttribute m_shareAttribute;
 protected:
     Intrinsic m_intrinsic { NoIntrinsic }; // Effective only in NativeExecutable.
 };
